# player

./: AudioTrack.cpp  AudioTrack.h  AudioTrackObserver.cpp  AudioTrackObserver.h  CMakeLists.txt  ConcreteController.cpp  ConcreteController.h  Controller.h  DisplayElements.h  MusicLibrary.cpp  MusicLibrary.h  MusicLibraryFrame.cpp  MusicLibraryFrame.h  MusicLibraryObserver.cpp  MusicLibraryObserver.h  Observer.h  Playlist.cpp  Playlist.h  PlaylistGUI.cpp  PlaylistGUI.h  PlaylistObserver.cpp  PlaylistObserver.h  Subject.h  main.cpp
test/: AudioTrackTest.cpp  CMakeLists.txt  MusicLibraryFixture.cpp  MusicLibraryTest.cpp  PlaylistFixture.cpp  PlaylistTest.cpp  runAllTests.cpp
